--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "glass-metal-studio",
-  "version": "0.1.0",
+  "name": "nelax-system",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
